# gve_devnet_nxos_syslog_route_monitor

./: README.md  pyproject.toml  route_monitor.py
